--- a/code/ui/Hud.razor
+++ b/code/ui/Hud.razor
@@ -8,6 +8,10 @@
 <root>
     <ChatBox/>
     <VoiceList/>
+    <div class="header">
+        <label>Rocket Jump Beta</label>
+        <label class="subtitle">Control: RMB - jump. R - respawn. tab - score</label>
+    </div>
 </root>
 
 @code
