--- a/code/ui/Hud.razor
+++ b/code/ui/Hud.razor
@@ -32,9 +32,13 @@
 
     public override void Tick() {
         var k = "";
-        if ( (MyGame.Current as MyGame).gamemode == 1 )
-			        k = $"Collected: {(Game.LocalPawn as Pawn).countCollected}";
-        HealthLabel.Text = $"Health: {(Game.LocalPawn as Pawn).Health.ToString("F2")}\nmode: {(MyGame.Current as MyGame).gamemode}\n" + k;
+        var pawn = (Game.LocalPawn as Pawn);
+        if ( (MyGame.Current as MyGame).gamemode == 1 && pawn != null)
+			        k = $"Collected: {pawn.countCollected}";
+        var health = "";
+        if (pawn != null)
+            health = pawn.Health.ToString("F2");
+        HealthLabel.Text = $"Health: {health}\nmode: {(MyGame.Current as MyGame).gamemode}\n" + k;
 
         IClient[] clients = Game.Clients.ToArray();
         var scoreBoard = "";
