--- a/code/ui/Hud.razor
+++ b/code/ui/Hud.razor
@@ -19,9 +19,7 @@
     <div class="scoreboard">
         <label @ref=ScoreBoard></label>
     </div>
-    <div class="info">
-        <label class="health" @ref=HealthLabel></label>
-    </div>
+    <label></label>
 </root>
 
 @code
