--- a/code/ui/Hud.razor
+++ b/code/ui/Hud.razor
@@ -19,31 +19,45 @@
     <div class="scoreboard">
         <label @ref=ScoreBoard></label>
     </div>
-    <label></label>
+    <div class="info">
+        <label class="health" @ref=HealthLabel></label>
+    </div>
+    <div class="Velocity">
+        <label @ref=Velocity></label>
+    </div>
 </root>
 
 @code
 {
     public Label HealthLabel {get; set;}
+    public Label Velocity {get; set;}
     public Label ScoreBoard {get; set;}
-    public bool showScoreboard {get; set;}
 
     public override void Tick() {
         var k = "";
         var pawn = (Game.LocalPawn as Pawn);
+        if ( pawn == null )
+            return;
+        IClient[] clients = Game.Clients.ToArray();
+        IClient winner = clients[0];
+        for ( int i = 0; i < clients.Length; i++ )
+	    {
+		    if ( (clients[i].Pawn as Pawn).Velocity.Length > (winner.Pawn as Pawn).Velocity.Length ) 
+            {
+                winner = clients[i];
+            }
+	    }
+        Velocity.Text = $"Velocity: {pawn.Velocity.Length.ToString("F2")}\nMax Velocity By: {winner.Name}";
         if ( (MyGame.Current as MyGame).gamemode == 1 && pawn != null)
 			        k = $"Collected: {pawn.countCollected}";
-        var health = "";
-        if (pawn != null)
-            health = pawn.Health.ToString("F2");
+        var health = pawn.Health.ToString("F2");
         HealthLabel.Text = $"Health: {health}\nmode: {(MyGame.Current as MyGame).gamemode}\n" + k;
 
-        IClient[] clients = Game.Clients.ToArray();
         var scoreBoard = "";
-        if ( showScoreboard || true ) {
+        if ( pawn.scoreboard ) {
 	        for ( int i = 0; i < clients.Length; i++ )
 	        {
-		        scoreBoard += $"{clients[i].Name} - Killed: {(clients[i].Pawn as Pawn).Killed}, Deaths: {(clients[i].Pawn as Pawn).Deaths}, Ping: {clients[i].Ping}\n";
+		        scoreBoard += $"{clients[i].Name} - Killed: {(clients[i].Pawn as Pawn).Killed}, Deaths: {(clients[i].Pawn as Pawn).Deaths}, Velocity: {(clients[i].Pawn as Pawn).Velocity.Length.ToString("F2")}, Ping: {clients[i].Ping}\n";
 	        }
         }
         ScoreBoard.Text = scoreBoard;
