--- a/code/ui/Hud.razor
+++ b/code/ui/Hud.razor
@@ -14,7 +14,7 @@
 
     <div class="header">
         <label>Rocket Jump Beta</label>
-        <label class="subtitle">Control: RMB - jump. R - respawn. tab - score</label>
+        <label class="subtitle">Control: RMB - jump. R - respawn. tab - score, e - reload</label>
     </div>
     <div class="jump">
         <label @ref=JumpLabel></label>
