--- a/code/Lobby.razor
+++ b/code/Lobby.razor
@@ -28,16 +28,16 @@
 	</div>
 		<div class="left">
 			<div class="title">
-				Sandbox
+				Rocket Jump
 			</div>
 
 			<div class="explanation">
 				<p>
-					Rocket Jump
+					Rocket Jump, afk: @afk
 				</p>
 			</div>
 			<div class="update">
-				Current update: "chatbox; voice chat; fix somefings; don't fix 1 problem, idk how fix; TOO BIG TEXT"
+				Current update: "TODO: CHANGE THIS TEXT"
 			</div>
 			<div class="button-list">
 				<div class="button" onclick=@( () => CreateServer() )>
@@ -95,7 +95,7 @@
 
 @code
 {
-	/*
+			/*
 			// Assuming Scene.LoadFromFile() can directly read and interpret the saved file.
 			JsonObject resource = FileSystem.Data.ReadJson<JsonObject>( "scene.json" );
 			Scene.Deserialize(resource);
@@ -103,15 +103,14 @@
 	private bool IsRefreshing { get; set; }
 	private List<LobbyInformation> List { get; set; } = new();
 	private Leaderboards.Entry[] players { get; set; } = [];
-	private bool saveAvailable = false;
-	private int lastfile = FileSystem.Data.ReadJson<int>( "lastsave" );
+	private double afk = Stats.GetLocalPlayerStats("skop.rocket_jump_scene").Get("afk").Value;
 	private int MyValue;
-	
+
 	protected override void OnFixedUpdate()
 	{
-		
+
 	}
-	
+
 	protected override async void OnEnabled()
 	{
 		base.OnEnabled();
@@ -120,16 +119,17 @@
 		await board.Refresh();
 		players = board.Entries;
 		/*
-			FileSystem.Data.WriteJson<JsonObject>( $"scene{lastfile}.json", resource ); 
-			FileSystem.Data.WriteJson<int>( "lastsave", lastfile+1 );
-		*/
+		FileSystem.Data.WriteJson<JsonObject>( $"scene{lastfile}.json", resource ); 
+		FileSystem.Data.WriteJson<int>( "lastsave", lastfile+1 );
+	*/
 		// Log.Info(players);
 		_ = RefreshLobbyList();
 	}
 
 	protected override void OnUpdate()
 	{
-		
+		Sandbox.Services.Stats.Increment("afk", Time.Delta);
+		afk += Time.Delta;
 	}
 
 	
