--- a/code/Lobby.razor
+++ b/code/Lobby.razor
@@ -37,7 +37,7 @@
 				</p>
 			</div>
 			<div class="update">
-				Current update: "TODO: CHANGE THIS TEXT"
+				Current update: "player health & afk time count & i don't forgot change this"
 			</div>
 			<div class="button-list">
 				<div class="button" onclick=@( () => CreateServer() )>
