make hud better

--- a/code/Hud.razor
+++ b/code/Hud.razor
@@ -14,6 +14,7 @@
 		}
 	</div>
 	<div class="hp">@PlayerController.Local.Health</div>
+	<div class="pr">Press r to respawn</div>
 	<TextEntry @ref="InputBox" onsubmit="@ChatFinished"></TextEntry>
 </root>
 
