make bullet network

--- a/code/Hud.razor
+++ b/code/Hud.razor
@@ -15,6 +15,7 @@
 	</div>
 	<div class="hp">@PlayerController.Local.Health</div>
 	<div class="pr">Press r to respawn</div>
+	<div class="state">Mode: Default</div>
 	<TextEntry @ref="InputBox" onsubmit="@ChatFinished"></TextEntry>
 </root>
 
